[project]
name = "gsplat-examples"
version = "0.1.0"
description = "gsplat examples environment"
requires-python = ">=3.10,<3.11"
dependencies = [
    # Core
    "torch==2.1.2",
    "torchvision==0.16.2",
    "setuptools==69.5.1",

    # 3D Gaussian Splatting
    "gsplat==1.5.3",

    # Data parsing
    "pycolmap",

    # Viewer
    "viser",
    "nerfview",

    # Image/Video
    "imageio[ffmpeg]",
    "opencv-python",
    "Pillow",
    "piexif",

    # ML/Metrics
    "torchmetrics[image]",
    "scikit-learn",

    # Numerical
    "numpy<2",
    "tensorly",
    "splines",

    # Config/CLI
    "tyro>=0.8.8",
    "pyyaml",

    # Logging
    "tensorboard",
    "matplotlib",
    "tqdm",
]

# CUDA拡張を含むパッケージは別途インストール（build-isolationの問題を回避）
# uv sync 後に以下を実行:
# uv pip install --no-build-isolation git+https://github.com/rahul-goel/fused-ssim@328dc9836f513d00c4b5bc38fe30478b4435cbb5
# uv pip install --no-build-isolation git+https://github.com/harry7557558/fused-bilagrid@49f0ef06c9f81810fb9b5dd9027cf1844950cc16
# uv pip install --no-build-isolation git+https://github.com/nv-tlabs/ppisp@v1.0.0

# アプリケーションモード（パッケージとしてインストールしない）
[tool.setuptools]
py-modules = []

# PyTorch CUDA 12.1 index
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

# gsplat wheel index
[[tool.uv.index]]
name = "gsplat-whl"
url = "https://docs.gsplat.studio/whl/pt21cu121"
explicit = true

# パッケージソースの指定
[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
gsplat = { index = "gsplat-whl" }
pycolmap = { git = "https://github.com/rmbrualla/pycolmap", rev = "cc7ea4b7301720ac29287dbe450952511b32125e" }
nerfview = { git = "https://github.com/nerfstudio-project/nerfview", rev = "4538024fe0d15fd1a0e4d760f3695fc44ca72787" }

# グローバル制約
[tool.uv]
override-dependencies = [
    "numpy<2",
]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
